--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.3",
     "vue-svg-component-runtime": "^1.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.6.2",
     "wangeditor": "^3.1.1"
   },
